# quite-ok-image-format

./: README.md  go.qoi
evolutionary-optimization/: README.md
evolutionary-optimization/goevo/: go.mod  go.sum  main.go  main_test.go
evolutionary-optimization/rustevo/: Cargo.toml
evolutionary-optimization/rustevo/benches/: my_benchmark.rs
evolutionary-optimization/rustevo/src/: lib.rs  main.rs
goqoi/: main.go  main_test.go
qoi/: README.md
qoi/goqoi/: go.mod  main.go  qoi
qoi/rustqoi/: Cargo.toml
rustqoi/: Cargo.toml
rustqoi/src/: main.rs
