[package]
name = "rustevo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustevo"
path = "src/lib.rs"

[[bin]]
name = "rustevo"
path = "src/main.rs"

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
rand = "0.8.5"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false
